--- a/helm/values-lab.yaml
+++ b/helm/values-lab.yaml
@@ -101,6 +101,11 @@ registry:
 gitlab-runner:
   install: false
 
+prometheus:
+  server:
+    ingress:
+      enabled: true
+
 gitlab:
   toolbox:
     replicas: 1
@@ -111,8 +116,8 @@ gitlab:
   gitaly:
     resources:
       requests:
-        cpu: 150m
-        memory: 250Mi
+        cpu: 100m
+        memory: 200Mi
       limits:
         cpu: 500m
         memory: 500Mi
@@ -120,6 +125,21 @@ gitlab:
   webservice:
     minReplicas: 2
     maxReplicas: 2
+    resources:
+      limits:
+        cpu: 1.5
+        memory: 2G
+      requests:
+        cpu: 300m
+        memory: 1.5G
+    workhorse:
+      resources:
+        limits:
+          cpu: 500m
+          memory: 500M
+        requests:
+          cpu: 100m
+          memory: 100M
 
   sidekiq:
     minReplicas: 2
@@ -128,3 +148,19 @@ gitlab:
   gitlab-shell:
     minReplicas: 2
     maxReplicas: 2
+    resources:
+      limits:
+        cpu: 200m
+        memory: 128Mi
+      requests:
+        cpu: 100m
+        memory: 6M
+
+  gitlab-exporter:
+    resources:
+      limits:
+        cpu: 500m
+        memory: 1G
+      requests:
+        cpu: 75m
+        memory: 100M
