--- a/helm/values-lab.yaml
+++ b/helm/values-lab.yaml
@@ -112,6 +112,13 @@ gitlab:
     antiAffinityLabels:
       matchLabels:
         app: 'gitaly'
+    resources:
+      limits:
+        cpu: 500m
+        memory: 1G
+      requests:
+        cpu: 50m
+        memory: 350M
 
   gitaly:
     resources:
@@ -127,7 +134,7 @@ gitlab:
     maxReplicas: 2
     resources:
       limits:
-        cpu: 1.5
+        cpu: 1500m
         memory: 2G
       requests:
         cpu: 300m
@@ -144,6 +151,13 @@ gitlab:
   sidekiq:
     minReplicas: 2
     maxReplicas: 2
+    resources:
+       limits:
+         cpu: 1500m
+        memory: 2G
+      requests:
+        cpu: 900m
+        memory: 1G
 
   gitlab-shell:
     minReplicas: 2
