--- a/helm/values-lab.yaml
+++ b/helm/values-lab.yaml
@@ -39,6 +39,7 @@ global:
       enabled: true
       hosts:
         - grafana.public-digital.lab.myddns.me
+        - grafana.gitlab.public-digital.lab.myddns.me
 
   appConfig:
     omniauth:
